--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@ function onDeviceReady() {
 
 function successCallback(result) {
   console.log(result);
+	alert(result);
 }
 
 function errorCallback(error) {
   console.log(error);
+	alert(error);
 }
 
 // Android only: check permission
