--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script class="jsbin" src="js/jquery.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src = "js/jquery-ui.js"></script>
-
+<script type="text/javascript" charset="utf-8" src="telephonenumber.js"></script>
      
 	<script>
 		document.addEventListener("deviceready", onDeviceReady, false);
