--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
      
 	<script>
 		function onDeviceReady() {
+			 window.plugins.sim.hasReadPermission(successCallback, errorCallback);
+			  window.plugins.sim.requestReadPermission(successCallback, errorCallback);
     window.plugins.sim.getSimInfo(successCallback, errorCallback);
 }
 
