--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function requestReadPermission() {
  
 <body> 
 	<div class="item">
-        <h2 style="text-align:center">SIM Information</h2>
+        <h2 style="text-align:center">SIM Info</h2>
     </div>
     <div class="item" style="width:100%">
         <p id="SIMInformation" class="item-note" ></p>
