--- a/index.html
+++ b/index.html
@@ -14,81 +14,97 @@
      
 	<script>
 		function init() {
-    	document.addEventListener("deviceready", onDeviceReady, false);
+    //	document.addEventListener("deviceready", onDeviceReady, false);
 	
 }
 		function onDeviceReady() {
-			  app.checkSMSPermission();
-			 app.sendSms();
+			// app.checkSMSPermission();
+	//		 app.sendSms();
      
 }
 
-var app = {
-    sendSms: function() {
-        var number = document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
-        var message = document.getElementById('messageTxt').value;
-   //     console.log("number=" + number + ", message= " + message);
- alert("number=" + number + ", message= " + message);
+//var app = {
+//    sendSms: function() {
+  //      var number = document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
+//        var message = document.getElementById('messageTxt').value;
+ //     console.log("number=" + number + ", message= " + message);
+ //alert("number=" + number + ", message= " + message);
         //CONFIGURATION
-        var options = {
-            replaceLineBreaks: false, // true to replace \n by a new line, false by default
-            android: {
-                intent: 'INTENT'  // send SMS with the native android SMS messaging
-                //intent: '' // send SMS without opening any other app
-            }
-        };
+    //    var options = {
+    //        replaceLineBreaks: false, // true to replace \n by a new line, false by default
+     //       android: {
+    //            intent: 'INTENT'  // send SMS with the native android SMS messaging
+    //            //intent: '' // send SMS without opening any other app
+      //      }
+     //   };
  
-        var success = function () { alert('Message sent successfully'); };
-        var error = function (e) { alert('Message Failed:' + e); };
-        sms.send(number, message, options, success, error);
-    }
-};
+     //   var success = function () { alert('Message sent successfully'); };
+     //   var error = function (e) { alert('Message Failed:' + e); };
+//        sms.send(number, message, options, success, error);
+//    }
+//};
 		
 		
-		var app = {
-    checkSMSPermission: function() {
-        var success = function (hasPermission) { 
-            if (hasPermission) {
-		    var number = document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
-        	    var message = document.getElementById('messageTxt').value;
-                sms.send(number, message, options, success, error);
-            }
-            else {
-                // show a helpful message to explain why you need to require the permission to send a SMS
-                // read http://developer.android.com/training/permissions/requesting.html#explain for more best practices
-            }
-        };
-        var error = function (e) { alert('Something went wrong:' + e); };
-        sms.hasPermission(success, error);
-    },
-    requestSMSPermission: function() {
-        var success = function (hasPermission) { 
-            if (!hasPermission) {
-                sms.requestPermission(function() {
-                    console.log('[OK] Permission accepted')
-			 navigator.notification.alert(  'Permission accepted',   alertDismissed,  'Login',   'Done'  );
-                }, function(error) {
-                    //console.info('[WARN] Permission not accepted')
-			 navigator.notification.alert(  'Permission not accepted',   alertDismissed,  'Login',   'Done'  );
-                    // Handle permission not accepted
-                })
-            }
-        };
-        var error = function (e) { alert('Something went wrong:' + e); };
-        sms.hasPermission(success, error);
-    }
-};
+//		var app = {
+ //   checkSMSPermission: function() {
+ //       var success = function (hasPermission) { 
+//            if (hasPermission) {
+//		    var number = document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
+ //       	    var message = document.getElementById('messageTxt').value;
+ //               sms.send(number, message, options, success, error);
+  //         }
+   //         else {
+   //             // show a helpful message to explain why you need to require the permission to send a SMS
+   //             // read http://developer.android.com/training/permissions/requesting.html#explain for more best practices
+  //          }
+  //      };
+  //      var error = function (e) { alert('Something went wrong:' + e); };
+ //       sms.hasPermission(success, error);
+ //   },
+ //  requestSMSPermission: function() {
+ //       var success = function (hasPermission) { 
+  //          if (!hasPermission) {
+ //               sms.requestPermission(function() {
+  //                  console.log('[OK] Permission accepted')
+//			 navigator.notification.alert(  'Permission accepted',   alertDismissed,  'Login',   'Done'  );
+  //              }, function(error) {
+    //                //console.info('[WARN] Permission not accepted')
+//			 navigator.notification.alert(  'Permission not accepted',   alertDismissed,  'Login',   'Done'  );
+  //                  // Handle permission not accepted
+  //              })
+  //         }
+  //      };
+  //     var error = function (e) { alert('Something went wrong:' + e); };
+   //     sms.hasPermission(success, error);
+ //  }
+//};
 function alertDismissed() {
             alert('Invalid');
-        }		    
+        }
+		
+//		
+		var app = {
+    sendSms: function() {
+        alert('click');
+        var number = document.getElementById('numberTxt').value;
+        var message = document.getElementById('messageTxt').value;
+        alert(number);
+        alert(message);
+        var intent = 'INTENT'; //leave empty for sending sms using default intent
+        var success = function () { alert('Message sent successfully'); };
+        var error = function (e) { alert('Message Failed:' + e); };
+        sms.send(number, message, intent, success, error);
+    }
+};
 </script>
 </head>
  
 <body> 
+	<center>Send SMS</center>
 	<input id="numberTxt" placeholder="Enter mobile number" value="" type="tel" />
 <textarea id="messageTxt" placeholder="Enter message"></textarea>
 <!--<input type="button" onclick="app.sendSms()" value="Send SMS" />-->
-<input type="button" onclick="'init();" value="Send SMS" /> 
+<input type="button" onclick="'app.sendSms();" value="Send SMS" /> 
  
 </body>
 </html>
