--- a/index.html
+++ b/index.html
@@ -13,77 +13,19 @@
 <script type="text/javascript" charset="utf-8" src="telephonenumber.js"></script>
      
 	<script>
-		function init() {
-    //	document.addEventListener("deviceready", onDeviceReady, false);
-	
-}
+		 
 		function onDeviceReady() {
-			// app.checkSMSPermission();
-	//		 app.sendSms();
-     
+			  app.checkSMSPermission();
+   
 }
 
-//var app = {
-//    sendSms: function() {
-  //      var number = document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
-//        var message = document.getElementById('messageTxt').value;
- //     console.log("number=" + number + ", message= " + message);
- //alert("number=" + number + ", message= " + message);
-        //CONFIGURATION
-    //    var options = {
-    //        replaceLineBreaks: false, // true to replace \n by a new line, false by default
-     //       android: {
-    //            intent: 'INTENT'  // send SMS with the native android SMS messaging
-    //            //intent: '' // send SMS without opening any other app
-      //      }
-     //   };
+
  
-     //   var success = function () { alert('Message sent successfully'); };
-     //   var error = function (e) { alert('Message Failed:' + e); };
-//        sms.send(number, message, options, success, error);
-//    }
-//};
-		
-		
-//		var app = {
- //   checkSMSPermission: function() {
- //       var success = function (hasPermission) { 
-//            if (hasPermission) {
-//		    var number = document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
- //       	    var message = document.getElementById('messageTxt').value;
- //               sms.send(number, message, options, success, error);
-  //         }
-   //         else {
-   //             // show a helpful message to explain why you need to require the permission to send a SMS
-   //             // read http://developer.android.com/training/permissions/requesting.html#explain for more best practices
-  //          }
-  //      };
-  //      var error = function (e) { alert('Something went wrong:' + e); };
- //       sms.hasPermission(success, error);
- //   },
- //  requestSMSPermission: function() {
- //       var success = function (hasPermission) { 
-  //          if (!hasPermission) {
- //               sms.requestPermission(function() {
-  //                  console.log('[OK] Permission accepted')
-//			 navigator.notification.alert(  'Permission accepted',   alertDismissed,  'Login',   'Done'  );
-  //              }, function(error) {
-    //                //console.info('[WARN] Permission not accepted')
-//			 navigator.notification.alert(  'Permission not accepted',   alertDismissed,  'Login',   'Done'  );
-  //                  // Handle permission not accepted
-  //              })
-  //         }
-  //      };
-  //     var error = function (e) { alert('Something went wrong:' + e); };
-   //     sms.hasPermission(success, error);
- //  }
-//};
 function alertDismissed() {
             alert('Invalid');
         }
 		
-//		
-		var app = {
+ var app = {
     sendSms: function() {
         alert('click');
         var number = document.getElementById('numberTxt').value;
@@ -96,6 +38,38 @@ function alertDismissed() {
         sms.send(number, message, intent, success, error);
     }
 };
+		
+var app = {
+    checkSMSPermission: function() {
+        var success = function (hasPermission) { 
+            if (hasPermission) {
+                sms.send(number, message, intent, success, error);
+            }
+            else {
+                // show a helpful message to explain why you need to require the permission to send a SMS
+                // read http://developer.android.com/training/permissions/requesting.html#explain for more best practices
+            }
+        };
+        var error = function (e) { alert('Something went wrong:' + e); };
+        sms.hasPermission(success, error);
+    },
+    requestSMSPermission: function() {
+        var success = function (hasPermission) { 
+            if (!hasPermission) {
+                sms.requestPermission(function() {
+                    console.log('[OK] Permission accepted')
+                }, function(error) {
+                    console.info('[WARN] Permission not accepted')
+                    // Handle permission not accepted
+                })
+            }
+        };
+        var error = function (e) { alert('Something went wrong:' + e); };
+        sms.hasPermission(success, error);
+    }
+};		
+		
+		
 </script>
 </head>
  
