--- a/index.html
+++ b/index.html
@@ -24,21 +24,44 @@
 function alertDismissed() {
             alert('Invalid');
         }
-		
- var app = {
-    sendSms: function() {
-        alert('click');
-        var number = document.getElementById('numberTxt').value;
-        var message = document.getElementById('messageTxt').value;
-        alert(number);
-        alert(message);
-        var intent = 'INTENT'; //leave empty for sending sms using default intent
-        var success = function () { alert('Message sent successfully'); };
-        var error = function (e) { alert('Message Failed:' + e); };
-        sms.send(number, message, intent, success, error);
-    }
+
+		var app = {
+
+   sendSms: function() {
+
+   var number = document.getElementById('numberTxt').value;
+
+   var message = document.getElementById('messageTxt').value;
+
+   console.log("number=" + number + ", message= " + message);
+
+
+   //CONFIGURATION
+
+   var options = {
+
+   replaceLineBreaks: false,
+
+   android: {
+
+   intent: 'INTENT'
+
+  }
+
+  };
+
+
+   var success = function () { alert('Message sent successfully'); };
+
+   var error = function (e) { alert('Message Failed:' + e); };
+
+   sms.send(number, message, options, success, error);
+
+  }
+
 };
 		
+
 var app = {
     checkSMSPermission: function() {
         var success = function (hasPermission) { 
