--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
          </div>
          <div data-role="content">
             <div data-role="fieldcontain">
-               <input name="" id="numberTxt" placeholder="Enter mobile number" value=""
-                  type="tel" data-mini="true"><br>
+               <input name="" id="numberTxt" placeholder="Enter mobile number" value="" type="tel" data-mini="true"><br>
                <textarea name="" id="messageTxt" placeholder="Enter message" data-mini="false"></textarea>
                <br>
-               <input id="btnDefaultSMS" type="submit" data-theme="e"
-                  value="Send SMS" data-mini="false">
+               <input id="btnDefaultSMS" type="submit" data-theme="e" value="Send SMS" data-mini="false">
             </div>
          </div>
       </div>
