--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <script src="codiqa.ext.js"></script>
       <!-- for codova plugins -->
       <script type="text/javascript" src="cordova.js"></script>
-      <script type="text/javascript" src="smsplugin.js"></script>
+      <script type="text/javascript" src="sms.js"></script>
       <script type="text/javascript">
          $(document).ready(function() {
                app.checkSMSPermission();
