--- a/index.html
+++ b/index.html
@@ -4,37 +4,25 @@
  
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <script type="text/javascript" src="cordova.js"></script>
-<script>
-
-function onDeviceReady() {
-			//  app.checkSMSPermission();
-   
-}
-var app = {
-    sendSms: function() {
-        var number = document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
-        var message = document.getElementById('messageTxt').value;
-        console.log("number=" + number + ", message= " + message);
-
-        //CONFIGURATION
-        var options = {
-            replaceLineBreaks: false, // true to replace \n by a new line, false by default
-            android: {
-                intent: 'INTENT'  // send SMS with the native android SMS messaging
-                //intent: '' // send SMS without opening any other app
-            }
-        };
-
-        var success = function () { alert('Message sent successfully'); };
-        var error = function (e) { alert('Message Failed:' + e); };
-        sms.send(number, message, options, success, error);
-    }
-};
-
-</script>
+ 
 <body>
-<input id="numberTxt" placeholder="Enter mobile number" value="" type="tel" />
-<textarea id="messageTxt" placeholder="Enter message"></textarea>
-<input type="button" onclick="app.sendSms()" value="Send SMS" />
-</body>
+
+		<header class="bar bar-nav">
+	      <h1 class="title">SMS Demo</h1>
+	    </header>
+
+	    <div class="content">
+	    	<div class="content-padded">
+		    	<form>
+				<input type="text" id="number" placeholder="Phone Number"><br/>
+				<textarea id="message" placeholder="Message"></textarea>
+				<input type="button" class="btn btn-positive btn-block" id="sendMessage" value="Send Message">
+				</form>
+			</div>
+		</div>
+
+
+	<script src="cordova.js"></script>	
+	<script src="js/app.js"></script>
+	</body>
 </html>
