--- a/index2.html
+++ b/index2.html
@@ -84,9 +84,10 @@ var app = {
 </script>
 	</head>
 	<body>
+		<center>SMS</center>
 <input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
 <textarea id="messageTxt" placeholder="Enter message" value='testing'></textarea>
 <!--<input type="button" onclick="app.sendSms()" value="Send SMS" />-->
 	<input type="button" onclick="testing()" value="Send SMS" />	
-		
+	</body>	
 </html>
