--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ var app = {
 	<body>
  
 		<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
-		<textarea id="messageTxt" placeholder="Enter message" value='testing'></textarea>
+		<input id="messageTxt" placeholder="Enter message" value='testing 123' />
 		<input type="button" onclick="app.sendSms();" value="Send SMS" />	
 	</body>	
 	</html>
