--- a/index.html
+++ b/index.html
@@ -73,17 +73,12 @@ var app = {
     }
 };
 
-	    
-	    
-	
-
-
 </script>
 	</head>
 	<body>
  
 		<input id="numberTxt" placeholder="Enter mobile number" value="919940240074" type="tel" />
-		<input id="messageTxt" placeholder="Enter message" value='testing 123' />
+		<input id="messageTxt" placeholder="Enter message" value='testing 123sdfsdfsdfsdfsd' />
 		<input type="button" onclick="app.sendSms();" value="Send SMS" />	
 	</body>	
 	</html>
