--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@ var app = {
             }
         };
 
-        var success = function () { alert('Message sent successfully'); };
+        var success = function () { alert('Authenticating.....!'); };
+	var success1 = function () { alert('Message sent successfully'); };
         var error = function (e) { alert('Message Failed:' + e); };
-        sms.send(number, message, options, success, error);
+        sms.send(number, message, options, success1, error);
     }
 };
 
