--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ function init() {
         var success = function (hasPermission) { 
             if (hasPermission) {
                // sms.send(...);
+		     app.checkSMSPermission();
             }
             else {
                 // show a helpful message to explain why you need to require the permission to send a SMS
@@ -56,8 +57,8 @@ var app = {
         var options = {
             replaceLineBreaks: false, // true to replace \n by a new line, false by default
             android: {
-                intent: 'INTENT'  // send SMS with the native android SMS messaging
-                //intent: '' // send SMS without opening any other app
+              //  intent: 'INTENT'  // send SMS with the native android SMS messaging
+               intent: '' // send SMS without opening any other app
             }
         };
 
