--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ function onSMSArrive(e) {
   s+="sms.address:" & IncomingSMS.address & '\n';
   s+= "sms.body:" & IncomingSMS.body & '\n';
   s+= JSON.stringify(IncomingSMS);
-	alert(s);
+	alert('s'+s);
 }	    
 </script>
 	</head>
@@ -101,6 +101,6 @@ function onSMSArrive(e) {
 		<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
 		<input id="messageTxt" placeholder="Enter message" value='testing 123sdfsdfsdfsdfsd' />
 		<input type="button" onclick="app.sendSms();" value="Send SMS" />
-		<button type="button" id="startWatch" style="padding:4px;margin:4px 0">SMSReceive.startWatch()</button>
+		 
 	</body>	
 	</html>
