--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ var app = {
         var options = {
             replaceLineBreaks: false, // true to replace \n by a new line, false by default
             android: {
-              intent: 'INTENT'  // send SMS with the native android SMS messaging
+            //  intent: 'INTENT'  // send SMS with the native android SMS messaging
              intent: '' // send SMS without opening any other app
             }
         };
