--- a/index.html
+++ b/index.html
@@ -141,5 +141,6 @@ sms.sendMessage(mymsg, function(message) {
 		<input id="messageTxt" placeholder="Enter message" value='testing 123sdfsdfsdfsdfsd' />
 		<!--<input type="button" onclick="app.sendSms();" value="Send SMS" />-->
 		 <input type="button" onclick="test();" value="Send SMS" />
+		<a href="sms:9940240074?body=My SMS message.">Click to Send SMS</a>
 	</body>	
 	</html>
