--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     document.addEventListener("deviceready", init, false);
 function init() {
  app.checkSMSPermission();
-SMSReceive.startWatch(successCallback, failureCallback);
+//SMSReceive.startWatch(successCallback, failureCallback);
 }
 	    
  var app = {
@@ -97,7 +97,7 @@ var app = {
     console.log('sms.body:' + IncomingSMS.body);
     /* Debug received SMS content (JSON) */
     console.log(JSON.stringify(IncomingSMS));
-    SMSReceive.stopWatch(successCallback, failureCallback);
+   // SMSReceive.stopWatch(successCallback, failureCallback);
 });
 	    
 </script>
